ST-173 Allow only 'IPsec'; mark exceptions

--- a/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
+++ b/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
@@ -100,7 +100,7 @@ OVA SHA256SUM: D9D71C6BACE7FA8AC9913FDD9B6F2ACBE743AB31218C0357BB7A271D0D1E6DE6
   to provide output for cmd `show security ipsec security-associations
   detail`.
 - Juniper JunOS - MPLS forwarding tables collection fix
-- Mikrotik - fixed ipsec parsing for non-tunnel policies
+- Mikrotik - fixed IPsec parsing for non-tunnel policies
 - Mikrotik - fixed parsing of interfaces which have an only numeric
   name
 - Palo Alto - Cluster state detection added. Fixes path lookup on
@@ -250,10 +250,10 @@ OVA SHA256SUM: 2b208eb7584fd5b4708ea56a7f1688f4bf44624c872ef0d6b792576e88f9ff00
   internal info ip-db"
 - Cisco ACI, NX-OS - fixed parsing of interface description.
 - Cisco ASA - fix parsing of not configured tunnels
-- Cisco ASA - fixed parsing of different output for command "show
-  crypto ipsec sa"
-- Cisco ASA - fixed parsing of different output for command "show
-  crypto isakmp sa detail"
+- Cisco ASA - fixed parsing of different output for command `show
+  crypto ipsec sa`
+- Cisco ASA - fixed parsing of different output for command `show
+  crypto isakmp sa detail`
 - Cisco IOS - Allow PIM RP without groups
 - Cisco IOS - fix duplex and media type for C1700
 - Cisco IOS - fix parsing of command "show ip igmp snooping mrouter"
@@ -621,14 +621,14 @@ SHA256SUM: c16cbac6040e7d07d04c42142ddbb42acc0547c912d726efa1bd1138a58f5be4
   configuration security policies \| display set"
 - Juniper JunOS - fixed parsing of different output for command "show
   ethernet-switching interface"
-- Juniper JunOS - fixed parsing of different output for command "show
-  lldp neighbors interface \<int>"
-- Juniper JunOS - fixed parsing of different output for command "show
-  security ipsec security-associations detail"
-- Juniper JunOS - fixed parsing of different output for command "show
-  security ipsec security-associations detail"
-- Juniper JunOS - fixed parsing of different output for command "show
-  vlans detail"
+- Juniper JunOS - fixed parsing of different output for command `show
+  lldp neighbors interface \<int>`
+- Juniper JunOS - fixed parsing of different output for command `show
+  security ipsec security-associations detail`
+- Juniper JunOS - fixed parsing of different output for command `show
+  security ipsec security-associations detail`
+- Juniper JunOS - fixed parsing of different output for command `show
+  vlans detail`
 - Mikrotik RouterOS - fixed parsing of different output for command
   "/ip neighbor print detail"
 - Palo Alto - transceivers - "show system state filter-pretty
@@ -677,15 +677,15 @@ SHA256SUM: c16cbac6040e7d07d04c42142ddbb42acc0547c912d726efa1bd1138a58f5be4
   deprecated
 - Cisco - IP unnumbered addresses mapped to L3 interfaces
 - Cisco ACI - Too long VRF name over multiple lines parsing fix for
-  "show system internal epm vrf all"
-- Cisco ASA - fixed parsing of different output for command "show
-  crypto ipsec sa"
+  `show system internal epm vrf all`
+- Cisco ASA - fixed parsing of different output for command `show
+  crypto ipsec sa`
 - Cisco ASA - fixed parsing of different output for command "show
   crypto isakmp sa detail"
-- Cisco IOS - fixed parsing of different output for command "show
-  crypto ipsec sa"
-- Cisco IOS - fixed parsing of different output for command "show ip
-  route"
+- Cisco IOS - fixed parsing of different output for command `show
+  crypto ipsec sa`
+- Cisco IOS - fixed parsing of different output for command `show ip
+  route`
 - Cisco IOS - fixed parsing of different output for command "show vlan
   brief"
 - Cisco IOS - multicast MAC address table - parsing updated to support
@@ -751,8 +751,8 @@ SHA256SUM: 8a3805704b6f4b126d960e3953749f936c67e635d94d387d86ddea6ecf4ea8fc
   - PaloAlto
   - Mikrotik
 - Adds detailed IPsec technology tables
-  - Tunnels (/technology/security/ipsec/tunnels)
-  - Gateways (/technology/security/ipsec/gateways)
+  - Tunnels (`/technology/security/ipsec/tunnels`)
+  - Gateways (`/technology/security/ipsec/gateways`)
 - Adds Zone-Based Firewall support for the following platforms
   - Palo Alto
   - Checkpoint Gaia
