--- a/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.0.md
+++ b/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.0.md
@@ -182,7 +182,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-6898` -- Medium -- Bugfix: commands/cisco/ptp/clockDatasetParentDomain
 - `NIM-6899` -- Medium -- Bugfix: commands/cisco/ptp/clockRunningDomain
 - `NIM-6900` -- Medium -- Bugfix: commands/juniper/_junos/configurationDisplaySet
-- `NIM-6901` -- Medium -- Bugfix: commands/juniper/_junos/securityIpsecSecurityAssociationsDetail
+- `NIM-6901` -- Medium -- Bugfix: `commands/juniper/_junos/securityIpsecSecurityAssociationsDetail`
 - `NIM-6902` -- Medium -- Bugfix: commands/f5/_big-ip/ntp
 - `NIM-6904` -- Medium -- Bugfix: commands/cisco/showRun
 - `NIM-6908` -- Medium -- Bugfix: tasks/portChannel
