--- a/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
@@ -62,7 +62,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8363` -- High -- getIpLongs needs to be fixed
 - `NIM-8404` -- Medium -- Snapshots in error state are not unloaded
 - `NIM-8429` -- High -- Incorrect running discovery content
-- `NIM-8467` -- Medium -- Bugfix: tasks/ipsec (develop)
+- `NIM-8467` -- Medium -- Bugfix: `tasks/ipsec` (develop)
 - `NIM-8487` -- Medium -- Default user privilege's values for cisco ASA/IOS
 - `NIM-8488` -- Medium -- Settings - Advanced - missing initial values
 - `NIM-8490` -- Low -- Jumphost ssh key unprintable chars when dowloading over API
@@ -100,7 +100,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8921` -- Medium -- Center loader when table content is wider than viewport
 - `NIM-8928` -- High -- Error in handling empty ref
 - `NIM-8931` -- Medium -- Table is not visible after page load
-- `NIM-8932` -- Medium -- Mikrotik ipsec policy output
+- `NIM-8932` -- Medium -- Mikrotik IPsec policy output
 - `NIM-8934` -- Medium -- Bugfix: commands/hp/_comware/linkAggregationVerbose (5.0.1+10)
 - `NIM-8935` -- Medium -- Bugfix: commands/cisco/ipv6NeighborVrfAll (5.0.1+10)
 - `NIM-8936` -- Medium -- Bugfix: commands/vmware/_nsx-t/ospfNeighbors - Tesco (5.0.1+10)
