--- a/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.0.md
@@ -17,7 +17,7 @@ Stories are high-level features, that may consist of many tasks. These would typ
 - `NIM-7063` -- High -- Comment/Description for Vendor API configuration
 - `NIM-7623` -- High -- Alcatel OmniSwitch - Discovery RATP and CNES on AOS
 - `NIM-8231` -- High -- Add token an loginType into SilverPeak vendor API
-- `NIM-8753` -- High -- Forcepoint - firewall, ipsec, version auto detect (umbrella ticket)
+- `NIM-8753` -- High -- Forcepoint - firewall, IPsec, version auto detect (umbrella ticket)
 - `NIM-8997` -- Medium -- PBR (Policy Based Routing)
 - `NIM-9196` -- High -- Rethink where we store access token for web
 - `NIM-9230` -- Medium -- Case insensitive Regex (ireg)
@@ -509,7 +509,7 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 - `NIM-8733` -- Medium -- Forcepoint - security (zoneFw)
 - `NIM-8734` -- High -- Forcepoint - API client
 - `NIM-8750` -- Medium -- Route-map - HP Comware
-- `NIM-8754` -- Medium -- Forcepoint - tasks/ipsec
+- `NIM-8754` -- Medium -- Forcepoint - `tasks/ipsec`
 - `NIM-8758` -- Medium -- Forcepoint - l3Int.tunnel
 - `NIM-8998` -- Medium -- PBR - security-tree-like diagram
 - `NIM-9025` -- Medium -- PBR - path inspector
