--- a/docs/releases/release_notes_low-level/5.x/5.0.x/5.0.0.md
+++ b/docs/releases/release_notes_low-level/5.x/5.0.x/5.0.0.md
@@ -247,7 +247,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8385` -- Medium -- ipv6 address lookup in the UI doesn't seem to work
 - `NIM-8386` -- Medium -- Update task dependency reference to another task
 - `NIM-8387` -- Medium -- Client IP missing for (HP ArubaIAP)
-- `NIM-8388` -- Medium -- Bugfix: commands/cisco/_viptela/v1/ipSec/ikeSessions
+- `NIM-8388` -- Medium -- Bugfix: `commands/cisco/_viptela/v1/ipSec/ikeSessions`
 - `NIM-8389` -- Medium -- Bugfix: commands/cisco/_viptela/v1/configRunning
 - `NIM-8390` -- Medium -- (ipv4 or ipv6) on an l3Interface update updater
 - `NIM-8392` -- Medium -- Cisco APIC - scope property can be empty
