--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -2,7 +2,7 @@
 tags: ["draft"]
 ---
 
-# IP Fabric v6.2 (Camlet)
+# IP Fabric v6.2 (Hessian)
 
 !!! danger "Unreleased version"
 
@@ -17,21 +17,23 @@ tags: ["draft"]
 - Tables for Cisco APIC (endpoint group contracts, applications, bridge domains and controllers) have `siteName` and `hostname` columns replaced by `apiUrl` string column.
 
 ### Noticeable changes
+
 - Limiting the number of the Discovery services restarts -- only 1 restart per service is allowed (previously unlimited). Crashed service will impact the IP Fabric ability to finish running discovery or start a new one. Investigation of the cause of the restart is advised.
 
 ### Network Discovery
 
 - Alcatel -- Added support for basic network management (see our [feature matrix](https://matrix.ipfabric.io) for more details)
 - Cisco
-    - FMC -- Added support for HA Pairs in Zone Firewall
-    - FMC -- Added support for EtherChannels in Zone Firewall
+  - FMC -- Added support for HA Pairs in Zone Firewall
+  - FMC -- Added support for EtherChannels in Zone Firewall
 - Forcepoint -- NAT support was added (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - FS -- Added limited support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - PaloAlto
-    - Panos -- Added support for license (see our [feature matrix](https://matrix.ipfabric.io) for more details).
-    - Prisma -- Added support for management tasks (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+  - Panos -- Added support for license (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+  - Prisma -- Added support for management tasks (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+
 ### Upgrade Notices
 
-###  3rd party dependencies
+### 3rd party dependencies
 
 - package `dex` used for SSO was upgraded from version 2.30.2 to latest version 2.36.0, see [release notes](https://github.com/dexidp/dex/releases).
