ST-131 IP Fabric v3.x.x RN - Use code formatting for commands

--- a/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
@@ -103,13 +103,13 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8932` -- Medium -- Mikrotik IPsec policy output
 - `NIM-8934` -- Medium -- Bugfix: commands/hp/_comware/linkAggregationVerbose (5.0.1+10)
 - `NIM-8935` -- Medium -- Bugfix: commands/cisco/ipv6NeighborVrfAll (5.0.1+10)
-- `NIM-8936` -- Medium -- Bugfix: commands/vmware/_nsx-t/ospfNeighbors - Tesco (5.0.1+10)
+- `NIM-8936` -- Medium -- Bugfix: commands/vmware/_nsx-t/ospfNeighbors (5.0.1+10)
 - `NIM-8937` -- High -- Left menu gets lost instead of expanded
 - `NIM-8939` -- Medium -- Bugfix: commands/f5/_big-ip/listLtmVirtual (4.4.1+1)
 - `NIM-8940` -- Medium -- Scroll glitch on api table page with device explorer and advanced filter
 - `NIM-8941` -- Medium -- Bugfix: commands/f5/_big-ip/showLtmPoolDetail (4.4.2+1)
 - `NIM-8942` -- Medium -- failled command detection not working properly for Mikrotik routers
-- `NIM-8944` -- Medium -- Bugfix: commands/paloalto/showLldpNeiAll - Tesco (5.0.1+10)
+- `NIM-8944` -- Medium -- Bugfix: commands/paloalto/showLldpNeiAll (5.0.1+10)
 - `NIM-8946` -- High -- Bugfix: commands/juniper/_junos/configurationDisplaySet (5.0.0+47)
 - `NIM-8947` -- Medium -- RBAC for Webhooks
 - `NIM-8951` -- Highest -- Invalid number of parameters in saveFabricPath function
