--- a/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.1.md
+++ b/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.1.md
@@ -1,6 +1,6 @@
 # LLRN 6.1.1
 
-These are low-level release notes for IP Fabric release `6.1.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 8 issues.
+These are low-level release notes for IP Fabric release `6.1.1`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 9 issues.
 
 ## Bugs
 
@@ -9,6 +9,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-10492` -- High -- Fix issue of switching into FortiGate VDOM
 - `NIM-10501` -- High -- Improve speed of Checkpoint API discovery - eliminate duplicate queries and enable parallel load
 - `DOS-988` -- High -- Update git from 2.30.2 to remediate CVEs
+- `DOS-989` -- High -- Update libksba from 1.5.0 to remediate CVEs
 - `DOS-990` -- High -- Update sudo from 1.9.5 to remediate CVEs
 - `DOS-991` -- High -- Update libtiff from 4.2.0 to remediate CVEs
 - `DOS-993` -- High -- Update openssl 1.1.1n-0 to remediate CVEs
