--- a/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
@@ -91,7 +91,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8730` -- Medium -- EoL is not correct for Viptela without any PID property
 - `NIM-8747` -- Medium -- Cisco ACI - tasks/l3Interfaces validation fails - missing VRF on tunnel interfaces
 - `NIM-8764` -- Medium -- Bugfix: commands/hp/_arubacx/interfaceMgmt
-- `NIM-8765` -- Medium -- Bugfix: commands/hp/_arubasw/interfaceBrief - BP Dev Instance (5.0.0+47)
+- `NIM-8765` -- Medium -- Bugfix: commands/hp/_arubasw/interfaceBrief (5.0.0+47)
 - `NIM-8785` -- High -- Cannot detect prompt during discovery
 - `NIM-8851` -- Lowest -- Unresolved MAC vendor for MAC/ARP tables
 - `NIM-8875` -- Highest -- Pathlookup parameters validation fails
