ST-185 Add 'Upgrade version policy' snippet

--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -1,5 +1,7 @@
 # IP Fabric v6.1 (Burlap)
 
+--8<-- "snippets/upgrade_version_policy.md"
+
 --8<-- "snippets/clear_browser_cache.md"
 
 ## v6.1.1 (March 9th, 2023)
