--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -8,6 +8,8 @@ tags: ["draft"]
 
     This is an upcoming IP Fabric version, which has not been released yet and is not available for download.
 
+--8<-- "snippets/upgrade_version_policy.md"
+
 --8<-- "snippets/clear_browser_cache.md"
 
 ## v6.2.0 (TBD)
