ST-131 Use code formatting for commands in 4.x release notes

--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.0.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.0.md
@@ -74,7 +74,7 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 
 #### Other improvements
 
-- Cisco ASA/FTD - added support for ‘show DNS’ command and use it for
+- Cisco ASA/FTD - added support for `show DNS` command and use it for
   translation of FQDNs in objects/ACLs
 - Cisco WLC IOS-XE - Added parsing of wireless client IP address.
 - CheckPoint Gaia - added support for Link Aggregation (Bond
@@ -131,7 +131,7 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 - Arista EOS - fixed parsing of different output for command `show mlag detail`
 - Arista EOS - fixed parsing of different output for command `show ntp ass`
 - Arista EOS - Syslog - information is parsed from `show running-config` instead of `show logging`
-- Aruba CX - commands/arubacx/interface - fixed parsing for ip address
+- Aruba CX - `commands/arubacx/interface` - fixed parsing for ip address
   / mask
 - Aruba switch - standardize port speed units with other vendors
 - Checkpoint Gaia -
@@ -159,19 +159,19 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
   case power supply’s column model is empty
 - Cisco HSRP - fixed preemption
 - Cisco IOS - add stacking support for catalyst 2960-s platform
-- Cisco IOS - commands/cisco/mcast/macMulticast - add parsing support
+- Cisco IOS - `commands/cisco/mcast/macMulticast` - add parsing support
   for MAC table records with multiple interfaces per row
-- Cisco IOS - commands/cisco/mcast/pimNeighbor - fixed missing PIM
+- Cisco IOS - `commands/cisco/mcast/pimNeighbor` - fixed missing PIM
   version & different output structure on old IOS version
-- Cisco IOS - commands/cisco/vrrp - fixed parsing of preempt parameter
+- Cisco IOS - `commands/cisco/vrrp` - fixed parsing of preempt parameter
 - Cisco IOS - Fixed parsing for AAA section from running config.
 - Cisco IOS - fixed parsing of `show power inline` command for cases
   of empty device name
-- Cisco IOS - fixed parsing of "show version" command in case of
+- Cisco IOS - fixed parsing of `show version` command in case of
   faulty master switch
 - Cisco IOS - Fixed parsing of command `sh ip mroute vrf \<vrfName>`
   that would get translated by the DNS server
-- Cisco IOS - fixed parsing of command "show ip igmp snooping groups"
+- Cisco IOS - fixed parsing of command `show ip igmp snooping groups`
   in case port list does not contain any interface for a group
 - Cisco IOS - fixed parsing of the different output for command `show ip flow export command`
 - Cisco IOS - fixed parsing of the different output format of command
@@ -181,7 +181,7 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
   when device return it
 - Cisco IOS + IOS-XE - fixed false-positive error detection in command
   `show dot1x all details` in case of Tacacs session expiration.
-- Cisco IOS cat9300 - commands/cisco/vxlan/nveVni - fixed parsing for
+- Cisco IOS cat9300 - `commands/cisco/vxlan/nveVni` - fixed parsing for
   new command output format
 - Cisco IOS-XE - added parsing of another format of `show env all` and
   `show env status`
@@ -202,9 +202,9 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 - Cisco Meraki - `commands/cisco/_meraki/v0/devices/switch/ports` -
   Unexpected stp guard value: root guard.
 - Cisco Meraki - fixed parsing of Meraki device clients.
-- Cisco Nexus - commands/cisco/mac - Added support for FabricPath MAC
+- Cisco Nexus - `commands/cisco/mac` - Added support for FabricPath MAC
   entries
-- Cisco Nexus - commands/cisco/switchport - fix parsing for VLAN ID
+- Cisco Nexus - `commands/cisco/switchport` - fix parsing for VLAN ID
   ranges that are split over multiple lines
 - Cisco Nexus - fixed parsing of `show policy-map system type network-qos` command to support another output format
 - Cisco Nexus - `show environment fex all` cmd - added support of
@@ -228,12 +228,12 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 - Extreme XOS - `show ports transceiver information detail` fixed
   parsing of `-infinity` value
 - Extreme XOS - fixed parsing of port names for `show stpd <stpdDomain> ports counters` command
-- Extreme Enterasys - tasks/portChannel - port state fix
-- Extreme XOS - Fixed parsing of command 'show ip-security
-  dhcp-snooping vlan' to allow more or none ports in Trusted ports
+- Extreme Enterasys - `tasks/portChannel` - port state fix
+- Extreme XOS - Fixed parsing of command `show ip-security
+  dhcp-snooping vlan` to allow more or none ports in Trusted ports
   section
 - Extreme XOS - fixed parsing of command `show ports transceiver information detail` to allow transceivers without any statistics
-- F5 - commands/f5/\_big-ip/listNetSelf - add support of ipv6
+- F5 - `commands/f5/\_big-ip/listNetSelf` - add support of ipv6
   addresses
 - F5 BigIP - fixed parsing of Cluster members if they don't have
   Failover Unicast configured.
@@ -286,9 +286,9 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
   any area
 - HP Comware - fixed parsing of commands with large output (added cli
   clearing for Comware 3 format)
-- HP Comware - tasks/l2Interfaces - fixed mapping of interfaces in
+- HP Comware - `tasks/l2Interfaces` - fixed mapping of interfaces in
   case trunk doesn't contain any permitted vlans
-- HP Comware 5130 - commands/hp/\_comware/currentConfiguration - AAA
+- HP Comware 5130 - `commands/hp/\_comware/currentConfiguration` - AAA
   scheme fixed parsing for test-profile in aaa server configuration
 - Juniper Junes - fixed parsing of different output for command `show configuration | display set`
 - Juniper JunOS - added parsing for another output format of command
@@ -310,7 +310,7 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 - Juniper JunOS - removed duplicates in the routing table
 - Mikrotik RB1100 - Fixed parsing for command `ip ipsec installed-sa print detail`
 - Mikrotik RouterOS - fixed parsing of IP addresses of
-  actual-interface in command 'ip address print detail'
+  actual-interface in command `ip address print detail`
 - Palo Alto - fixed parsing of different output for command `show routing route`
 - Palo Alto, F5 clusters - Fix for establishing routing protocol edges
 - Palo Alto - fixed parsing for the routing table.
