--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.1.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.1.md
@@ -43,7 +43,7 @@ OVA SHA256SUM: 901018EE369B630CD80C6438B3A4D0C54F0F3D7BCD9156B9F93087C9B5147ECE
 - Fixed filename of downloaded Techsupport file
 - Routing to Cisco ACI pervasive address fix
 - Fortinet FortiGate - prevented to execute command `get system interface transceiver` if transceivers task is disabled
-- Cisco - SUP32 based Catalyst platforms - fixed to use `show ip igmp interface" comman` to gather IGMP snooping interface related
+- Cisco - SUP32 based Catalyst platforms - fixed to use `show ip igmp interface` command to gather IGMP snooping interface related
   information
 - Cisco ASA/FTD - added `show failover` command to detect
   Active/Standby status of unit/context in HA cluster
@@ -53,7 +53,7 @@ OVA SHA256SUM: 901018EE369B630CD80C6438B3A4D0C54F0F3D7BCD9156B9F93087C9B5147ECE
 - Juniper JunOS - fixed parsing for security with no address books.
 - Cisco - NX-OS - fixed parsing of interface speed on for some nexus
   switches
-- Cisco NX-OS - commands/cisco/stpMstMapList fixed parsing when mapped
+- Cisco NX-OS - `commands/cisco/stpMstMapList` fixed parsing when mapped
   vlans are on multiple lines
 - Juniper - fixed parsing of ethernet switching table on QFX switches
 - Fortinet FortiGate - fixed discovery of VDOMs with long name
@@ -122,7 +122,7 @@ OVA SHA256SUM: DD5F1F0F701974CC8367336DDB7B3877CAAF3BD6DC114BB37C178CD104CA8BA7
 - Cisco - fixed ACLs parsing in case they contain multiple white
   characters between keywords
 - Cisco - QoS fixed parsing for nested child service policies
-- Cisco IOS - commands/cisco/vxlan/nvePeers - added support for an
+- Cisco IOS - `commands/cisco/vxlan/nvePeers` - added support for an
   additional type of `show nve peers` command output
 - Cisco IOS-XE - Added exclusion for ACL rule
   `system-cpp-energywise-disc` containing bug (CSCue04444) in `show ip access-list`
