--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.2.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.2.md
@@ -54,7 +54,7 @@ OVA SHA256SUM: 8D773667434B4C27C9C199E84784312864E01C08D51DAA158B7C07C9B99BFD8F
 - Cisco IOS - Fix parsing of interface tunnel protocol.
 - Cisco IOS-XR, NX-OS - MPLS forwarding - shortened commands `sh mpl for` and `sh mpl switch` extended to their full syntax to prevent
   ambiguous command error
-- Cisco IOS/IOS-XE - tasks/vrf - use `show ip vrf detail` if `show vrf detail` is not available.
+- Cisco IOS/IOS-XE - `tasks/vrf` - use `show ip vrf detail` if `show vrf detail` is not available.
 - Cisco MS - Fixed parsing of Meraki device clients.
 - F5 BIG-IP i800 - Fix parsing of NTP data.
 - Fortinet FortiGate - Fix for bad parsing of command `diag hard dev nic`.
