--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
@@ -80,7 +80,7 @@ OVA SHA256SUM: 2D64A41DF78D3965F70AD80807D788FD12E0F7A1DDCF39A6B23911BF72A8311D
 
 - Palo Alto - Fixed discovery of multi vsys firewalls.
 - Mikrotik RouterOS - Fixed parsing of MTU in case it has value "auto"
-  in output of command ``/interface print detail`
+  in output of command `/interface print detail`
 - Fortinet FortiGate - Fixed wrongly assigned MAC address to link
   aggregation interfaces on HA primary units
 - Jumphost - Jumphost was broken in 4.3.0 release, fixed.
