SA-378 adding SSO notice

--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -36,6 +36,17 @@ tags: ["draft"]
 
 ### Upgrade Notices
 
+- Upgrade to `v6.2` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `vX.Y` in this file with `v6.2` and then run `systemctl restart ipf-dex`.
+
+  ```yaml
+  staticClients:
+  - id: ipfabric
+    redirectURIs:
+        - 'https://demo1.eu.ipfabric.io/api/vX.Y/auth/external/azure'
+  ```
+
+  For more information, please refer to the [SSO documentation](../../IP_Fabric_Settings/user_management/sso/#sso-configuration-ipf-dexyaml). If you would like assistance please contact your Solution Architect.
+
 ### 3rd party dependencies
 
-- package `dex` used for SSO was upgraded from version 2.30.2 to latest version 2.36.0, see [release notes](https://github.com/dexidp/dex/releases).
+- The `dex` package used for SSO was upgraded from version 2.30.2 to latest version 2.36.0, see [their release notes](https://github.com/dexidp/dex/releases).
